--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saylaniwelfare</title>
-    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-    <div class="container headear-alignment justify-content-between">
+    <div class="container d-flex justify-content-between text-bg-secondary align-items-center">
+        <!-- <div class="mailto-cantainer"> -->
         <span>info@SalyaniWelfare.com</span>
-         <span class="position-relative-right-">021-111-729-526</span>
+        <span class="d-block">021-111-729-526</span>
+        <!-- <div> -->
         <div>
             <button>English</button>
         </div>
     </div>
 
-    <nav class="contanier">
-
-        <div class="logo-alignment">
-            <img src="image/logo_saylaniwelfare.22bf709605809177256c.png" alt="saylani logo">
+    <nav class="container d-flex align-items-center justify-content-between sticky-top bg-white top-5">
+        <div>
+            <img src="image/logo_saylaniwelfare.22bf709605809177256c.png" alt="saylani logo" width="200">
         </div>
 
         <div class="nav-bar-list">
@@ -37,93 +38,149 @@
                 <li><a href="#">Overseas Donors</a></li>
             </ul>
         </div>
-        <div class="btn-contanier">
-            <button class="">DONATE NOW</button>
-            <button class="">BE A SPONESOR</button>
+        <div class=" d-flex btn-box">
+            <button type="button" class="btn btn-outline-primary">DONATE NOW</button>
+            <button type="button" class="btn btn-outline-success">BE A SPONESOR</button>
+
         </div>
     </nav>
 
 
     <section>
-        <div class="saylani-section">
-            <div>
-                <h1>
+        <div class="container d-flex justify-content-between align-items-center mt-5">
+            <div class="">
+                <h1 class="w-75 display-5">
                     Welcome to the
-                    <span class="SALYANI">Saylani</span> Welfare
-                    <span class="SMIT">IT and vocational trainings,||</span>
+                    <span class="display-5 text-green fw-bold">Saylani</span> Welfare
+                    <span class="display-5 text-primary">IT and vocational trainings</span>
                 </h1>
-                <p> Saylani Welfare is on the ground and already working with local communities to assess how best to
+                <p class="w-75"> Saylani Welfare is on the ground and already working with local communities to assess
+                    how best
+                    to
                     support underprivileged families in more than 63 areas of day to day lives.</p>
 
-                <button class="btn-section">Explorer more</button>
+                <button class="btn btn-white border-2 border">Explorer more</button>
             </div>
-            <div class="saylani-section-img">
-                <img src="image/38.png" alt="Refresh Banner">
+
+            <div class="banner-img">
+                <img class="w-100" src="image/38.png" alt="Refresh Banner">
             </div>
         </div>
 
     </section>
 
-    <div class="footer">
-        <div class="container text-white">
-            <div class=" mt-5">
-                <!-- <div class="col">
-                    <img src="images/logo.png" alt="logo"> -->
-                <div class="social-media d-flex">
-                    <div class="col-2  "> 
-                        <img src="image/44.png" alt="facebook">
-                    </div>
-                    <div class="col-2">
-                        <img src="image/41.png" alt="facebook">
-                    </div>
-                    <div class="col-2">
-                        <img src="image/39.png" alt="facebook">
-                    </div>
-                    <div class="col-2">
-                        <img src="image/43.png" alt="facebook">
-                    </div>
-                    <div class="col-2">
-                        <img src="image/43.png" alt="facebook">
-                    </div>
-                    <div class="col-2">
-                        <img src="image/43.png" alt="facebook">
-                    </div>
 
+    <section>
+        <div class="container row m-auto mt-5 pt-5 gy-5">
+            <div class="col-lg-2">
+                <div class="card bg-green d-flex align-items-center gap-3 py-4">
+                    <img src="image/44.png" alt="facebook" width="100">
+                    <h5>Welfare</h5>
                 </div>
-                <div class="container">
-                <div class="col">
-                    <h5>About</h5>
-                    <ul>
-                        <li><a href="">Indroduction</a></li>
-                        <li><a href="">Chairman Message</a></li>
-                        <li><a href="">Anual Report</a></li>
-                        <li><a href="">Bank Details</a></li>
-                    </ul>
+            </div>
+            <div class="col-lg-2">
+                <div class="card bg-green d-flex align-items-center gap-3 py-4">
+                    <img src="image/44.png" alt="facebook" width="100">
+                    <h5>Welfare</h5>
                 </div>
-                <div class="col">
-                    <h5>Explore</h5>
-                    <ul>
-                        <li><a href="">News</a></li>
-                        <li><a href="">Media</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">Donation</a></li>
-                    </ul>
+            </div>
+            <div class="col-lg-2">
+                <div class="card bg-green d-flex align-items-center gap-3 py-4">
+                    <img src="image/44.png" alt="facebook" width="100">
+                    <h5>Welfare</h5>
                 </div>
-                <div class="">
-                    <h5>Address</h5>
-                    <address>
-                        <p>A-25, Bahadurabad Chowrangi Karachi, Pakistan
+            </div>
+            <div class="col-lg-2">
+                <div class="card bg-green d-flex align-items-center gap-3 py-4">
+                    <img src="image/44.png" alt="facebook" width="100">
+                    <h5>Welfare</h5>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div class="card bg-green d-flex align-items-center gap-3 py-4">
+                    <img src="image/44.png" alt="facebook" width="100">
+                    <h5>Welfare</h5>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div class="card bg-green d-flex align-items-center gap-3 py-4">
+                    <img src="image/44.png" alt="facebook" width="100">
+                    <h5>Welfare</h5>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section>
+        <div class="container row m-auto mt-5 pt-5 gy-4">
+            <div class="col-lg-4">
+                <div class="card-service-1 rounded-4 p-2 d-flex flex-column justify-content-end">
+                    <h3 class="text-white bg-success w-50 fw-bold ">Daily Food</h3>
+                    <button class="btn bg-green-dark w-100 py-2">DONATE NOW</button>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card-service-1 rounded-4 p-2 d-flex flex-column justify-content-end">
+                    <h3 class="text-white bg-success w-50 fw-bold">Daily Food</h3>
+                    <button class="btn bg-green-dark w-100 py-2">DONATE NOW</button>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card-service-1 rounded-4 p-2 d-flex flex-column justify-content-end">
+                    <h3 class="text-white bg-success w-50 fw-bold">Daily Food</h3>
+                    <button class="btn bg-green-dark w-100 py-2">DONATE NOW</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="container bg-grey text-white mt-5">
+
+        <div class="row pt-5">
+            <div class="col">
+                <img class="w-100" src="image/logo_saylaniwelfare.22bf709605809177256c.png" alt="">
+            </div>
+            <div class="col">
+                <h5>About</h5>
+                <ul>
+                    <li><a href="">Indroduction</a></li>
+                    <li><a href="">Chairman Message</a></li>
+                    <li><a href="">Anual Report</a></li>
+                    <li><a href="">Bank Details</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <h5>Explore</h5>
+                <ul>
+                    <li><a href="">News</a></li>
+                    <li><a href="">Media</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Donation</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <h5>Address</h5>
+                <address>
+                    <p>A-25, Bahadurabad Chowrangi Karachi, Pakistan
                         UAN: 111-729-526 (+0092-213)4130786-90
                         CELL: 92-311-1729526
                         USA NO +1(716)941 7792
                         UK NO (+44)115 970 6256</p>
-                    </address>
-                </div>
-                </div>
+                </address>
             </div>
-        </div>
 
-    </div>
+            <div class="footer-copyright">
+
+                <h5 class="text-center">IP address data powered by <a href="">IPinfo</a></h5>
+
+
+
+            </div>
+
+
+    </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
