--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container d-flex justify-content-between text-bg-secondary align-items-center">
+    <div class="container email-address d-flex justify-content-between text-bg-secondary align-items-center">
         <!-- <div class="mailto-cantainer"> -->
         <span>info@SalyaniWelfare.com</span>
         <span class="d-block">021-111-729-526</span>
@@ -43,6 +43,33 @@
             <button type="button" class="btn btn-outline-success">BE A SPONESOR</button>
 
         </div>
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Media</a>
+                        </li>
+                      
+                   
+                </div>
+            </div>
+        </nav>
     </nav>
 
 
@@ -81,31 +108,31 @@
             <div class="col-lg-2">
                 <div class="card bg-green d-flex align-items-center gap-3 py-4">
                     <img src="image/44.png" alt="facebook" width="100">
-                    <h5>Welfare</h5>
+                    <h5>Medical</h5>
                 </div>
             </div>
             <div class="col-lg-2">
                 <div class="card bg-green d-flex align-items-center gap-3 py-4">
                     <img src="image/44.png" alt="facebook" width="100">
-                    <h5>Welfare</h5>
+                    <h5>Online Sadqah</h5>
                 </div>
             </div>
             <div class="col-lg-2">
                 <div class="card bg-green d-flex align-items-center gap-3 py-4">
                     <img src="image/44.png" alt="facebook" width="100">
-                    <h5>Welfare</h5>
+                    <h5>Clean Water</h5>
                 </div>
             </div>
             <div class="col-lg-2">
                 <div class="card bg-green d-flex align-items-center gap-3 py-4">
                     <img src="image/44.png" alt="facebook" width="100">
-                    <h5>Welfare</h5>
+                    <h5>Education</h5>
                 </div>
             </div>
             <div class="col-lg-2">
                 <div class="card bg-green d-flex align-items-center gap-3 py-4">
                     <img src="image/44.png" alt="facebook" width="100">
-                    <h5>Welfare</h5>
+                    <h5>Food</h5>
                 </div>
             </div>
         </div>
@@ -116,19 +143,19 @@
         <div class="container row m-auto mt-5 pt-5 gy-4">
             <div class="col-lg-4">
                 <div class="card-service-1 rounded-4 p-2 d-flex flex-column justify-content-end">
-                    <h3 class="text-white bg-success w-50 fw-bold ">Daily Food</h3>
+                    <h3 class="text-white fw-bold ">IT Entrepreneurship Courses</h3>
                     <button class="btn bg-green-dark w-100 py-2">DONATE NOW</button>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="card-service-1 rounded-4 p-2 d-flex flex-column justify-content-end">
-                    <h3 class="text-white bg-success w-50 fw-bold">Daily Food</h3>
+                    <h3 class="text-white w-50 fw-bold">Daily Food</h3>
                     <button class="btn bg-green-dark w-100 py-2">DONATE NOW</button>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="card-service-1 rounded-4 p-2 d-flex flex-column justify-content-end">
-                    <h3 class="text-white bg-success w-50 fw-bold">Daily Food</h3>
+                    <h3 class="text-white w-50 fw-bold">Zakat</h3>
                     <button class="btn bg-green-dark w-100 py-2">DONATE NOW</button>
                 </div>
             </div>
@@ -160,7 +187,7 @@
                 </ul>
             </div>
             <div class="col">
-                <h5>Address</h5>
+                <h5>Contact</h5>
                 <address>
                     <p>A-25, Bahadurabad Chowrangi Karachi, Pakistan
                         UAN: 111-729-526 (+0092-213)4130786-90
@@ -174,9 +201,9 @@
 
                 <h5 class="text-center">IP address data powered by <a href="">IPinfo</a></h5>
 
-
-
             </div>
+
+
 
 
     </footer>
