--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saylaniwelfare</title>
+    <script src="https://kit.fontawesome.com/c76b4c3498.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -13,10 +14,10 @@
 
 <body>
     <div class="container email-address d-flex justify-content-between text-bg-secondary align-items-center">
-        <!-- <div class="mailto-cantainer"> -->
-        <span>info@SalyaniWelfare.com</span>
-        <span class="d-block">021-111-729-526</span>
-        <!-- <div> -->
+        <div>
+            <span>info@SalyaniWelfare.com</span>
+            <span class="ms-3">021-111-729-526</span>
+        </div>
         <div>
             <button>English</button>
         </div>
@@ -44,31 +45,7 @@
 
         </div>
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Media</a>
-                        </li>
-                        
-                </div>
-            </div>
-        </nav>
+        <i class="menu fa-solid fa-bars"></i>
     </nav>
 
 
@@ -164,41 +141,49 @@
     <footer class="container bg-grey text-white mt-5">
 
         <div class="row pt-5">
-            <div class="col">
-                <img class="w-100" src="image/logo_saylaniwelfare.22bf709605809177256c.png" alt="">
+            <div class="col-lg-4">
+                <div class="">
+                    <img class="w-100" src="image/logo_saylaniwelfare.22bf709605809177256c.png" alt="">
+                </div>
             </div>
-            <div class="col">
-                <h5>About</h5>
-                <ul>
-                    <li><a href="">Indroduction</a></li>
-                    <li><a href="">Chairman Message</a></li>
-                    <li><a href="">Anual Report</a></li>
-                    <li><a href="">Bank Details</a></li>
-                </ul>
+            <div class="col-lg-2">
+                <div class="ps-5">
+                    <h4>About</h4>
+                    <ul>
+                        <li><a href="">Indroduction</a></li>
+                        <li><a href="">Chairman Message</a></li>
+                        <li><a href="">Anual Report</a></li>
+                        <li><a href="">Bank Details</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="col">
-                <h5>Explore</h5>
-                <ul>
-                    <li><a href="">News</a></li>
-                    <li><a href="">Media</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Donation</a></li>
-                </ul>
+            <div class="col-lg-2">
+                <div class="ps-5">
+                    <h4>Explore</h4>
+                    <ul>
+                        <li><a href="">News</a></li>
+                        <li><a href="">Media</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="">Donation</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="col">
-                <h5>Contact</h5>
-                <address>
-                    <p>A-25, Bahadurabad Chowrangi Karachi, Pakistan
-                        UAN: 111-729-526 (+0092-213)4130786-90
-                        CELL: 92-311-1729526
-                        USA NO +1(716)941 7792
-                        UK NO (+44)115 970 6256</p>
-                </address>
+            <div class="col-lg-4">
+                <div class="ps-5">
+                    <h4>Contact</h4>
+                    <address>
+                        <p>A-25, Bahadurabad Chowrangi Karachi, Pakistan
+                            UAN: 111-729-526 (+0092-213)4130786-90
+                            CELL: 92-311-1729526
+                            USA NO +1(716)941 7792
+                            UK NO (+44)115 970 6256</p>
+                    </address>
+                </div>
             </div>
 
             <div class="footer-copyright">
 
-                <h5 class="text-center">IP address data powered by <a href="">IPinfo</a></h5>
+                <h4 class="text-center">IP address data powered by <a href="">IPinfo</a></h4>
 
             </div>
 
@@ -206,6 +191,8 @@
 
 
     </footer>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
